# tomeshstein

./: .gitignore  CMakeLists.txt  README.md  video.cfg
help/: help.txt
maps/: Level 01.tmap  Level 02.tmap  Level 03.tmap  demo.tmap  map_template.tmap  plain.tmap
source/: main.cpp
source/engine/game/: shootergame.cpp  shootergame.h
source/engine/menu/: menu.cpp  menu.h  pause_menu.cpp  pause_menu.h
source/engine/tpge/: TPGE.cpp  TPGE.h
source/engine/utils/rng/: rng.h
source/engine/utils/threading/: renderer_thread.cpp  renderer_thread.h
source/items/gun/: gun.cpp  gun.h
source/misc/path/: path.cpp  path.h
source/misc/texture/: texture.cpp  texture.h
source/objects/: gameobject.cpp  gameobject.h
source/objects/container/: objectcontainer.cpp  objectcontainer.h
source/objects/moving/: movinggameobject.cpp  movinggameobject.h
source/objects/moving/enemy/: enemy.cpp  enemy.h
source/objects/moving/projectile/: projectile.cpp  projectile.h
source/objects/static/powerup/: powerup.cpp  powerup.h
source/player/: player.cpp  player.h
textures/: guns.xcf
